# python-api-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  Taskfile.yml  alembic.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: generate-version-info.md
docs/design/: architecture.md
migrations/: env.py
migrations/versions/: 7e2e4cb79faf_initial_migration.py
scripts/: README.md  alembic.sh  docker-rebuild.sh  docker-run.sh  docker-sh.sh  docker-stop.sh  dockerfile-info.sh  dot-env.sh  git-version.sh
src/api_server/: __init__.py  __version__.py  app.py  constants.py  database.py  exception_handlers.py  exceptions.py  logging.py  main.py  profile.py  self_check.py  settings.py  state.py  types.py
src/api_server/api/: __init__.py  addresses.py  api_router.py  dependencies.py  health_check.py  patients.py  ping.py  version.py
src/api_server/checks/: __init__.py  alembic_setup.py  database_health_check.py  database_initialization.py  database_schema_check.py  database_version.py  pipeline_builders.py
src/api_server/cli/: __init__.py  __main__.py  app.py  utils.py
src/api_server/cli/checks/: __init__.py  pipeline_builders.py  runner.py
src/api_server/cli/commands/: __init__.py  db.py
src/api_server/database/: __init__.py  advisory_lock.py  alembic_utils.py  connection.py
src/api_server/event_bus/: __init__.py  bus.py  core.py
src/api_server/events/: __init__.py  patient_handlers.py  types.py
src/api_server/graphql/: __init__.py  context.py  graphql_router.py  schema.py  types.py
src/api_server/home/: index.html
src/api_server/models/: api_model.py  base_model.py  db_model.py
src/api_server/readiness_pipeline/: __init__.py  base.py  builder.py  calculator.py  check_executor.py  enums.py  executor.py  models.py  pipeline.py  processor.py  stage.py
src/api_server/services/: __init__.py  address_service.py  di.py  health_check_service.py  patient_service.py  registry.py
src/api_server/templates/: index.html
src/api_server/utils/: __init__.py  file_utils.py  id_generator.py  metadata_loader.py  model_builder.py  model_converter.py  schema_utils.py  version.py
tests/: __init__.py  conftest.py  test_event_bus.py  test_settings.py  test_settings_injection.py
tests/graphql/: test_context.py
tests/readiness_pipeline/: __init__.py  test_base.py  test_check_executor.py  test_pipeline.py  test_stage.py
tests/services/: test_registry.py
tests/utils/: __init__.py  test_id_generator.py  test_model_builder.py  test_model_converter.py  test_version.py
